--- a/style.css
+++ b/style.css
@@ -28,3 +28,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
   }
+
+@media (max-width: 480px) {
+    body {
+        background-image: url("https://e0.365dm.com/22/10/2048x1152/skysports-world-cup-qatar-2022_5921764.jpg");
+    }
+    iframe{
+        width: 100%;
+        height: 40%;
+    }
+}
