--- a/style.css
+++ b/style.css
@@ -29,12 +29,22 @@ body {
     color: black;
   }
 
-@media (max-width: 480px) {
+  @media (max-width: 480px) {
     body {
         background-image: url("https://e0.365dm.com/22/10/2048x1152/skysports-world-cup-qatar-2022_5921764.jpg");
     }
-    iframe{
-        width: 110%;
+    div{
+        width: 100%;
         height: 30%;
+    }
+
+    #tablero{
+      width: 783; 
+      height: 500;
+    }
+    
+    #instagram   {
+      width: 50px;
+      height: 50px;
     }
 }
