--- a/style.css
+++ b/style.css
@@ -29,9 +29,11 @@ body {
     color: black;
   }
 
-   @media (max-width: 480px) {
+ @media screen and (max-width: 480px), (max-height: 700px) {
     body {
         background-image: url("https://e0.365dm.com/22/10/2048x1152/skysports-world-cup-qatar-2022_5921764.jpg");
+        background-size: 150px;
+        
     }
     div{
         width: 100%;
@@ -44,7 +46,7 @@ body {
     }
     
     #instagram   {
-      width: 50px;
-      height: 50px;
+      width: 25px;
+      height: 25px;
     }
 }
